--- a/Interfaz/Administrador/package.json
+++ b/Interfaz/Administrador/package.json
@@ -23,9 +23,11 @@
     "moment": "^2.29.4",
     "mongoose": "^6.9.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
