--- a/Interfaz/Administrador/package.json
+++ b/Interfaz/Administrador/package.json
@@ -21,11 +21,13 @@
     "express-session": "^1.17.3",
     "fastify": "^2.14.0",
     "fastify-static": "^2.7.0",
+    "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.9.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mv": "^2.1.1",
     "node-webcam": "^0.8.1",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
